--- a/index.html
+++ b/index.html
@@ -19,7 +19,14 @@
 
     
 <!-- Analytics -->
- 
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1RHZBE5SSZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-1RHZBE5SSZ');
+</script>
 <!-- Analytics END -->
     
 </head>
