--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 		<div class="container bloc-md">
 			<div class="row">
 				<div class="col-sm-12 text-center">
-					<p class="title-agence">L'agence La Panthère est une agence de web design qui aide les entreprise à devenir attractives et visibles sur internet.</p>
+					<h3 class="title-agence">L'agence La Panthère est une agence de web design qui aide les entreprise à devenir attractives et visibles sur internet.</h3>
 				</div>
 			</div>
 			<div class="row voffset-lg med-width-whitespace">
@@ -116,9 +116,9 @@
 			<div class="row voffset-lg voffset">
 				<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
 					
-					<p class="second-titre">
+					<h3 class="second-titre">
 						"L'agence La Penthère est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à lyon." 
-					</p>
+					</h3>
 					<span class="titre-span">Maxime Guibard, PDG de à vos fourchettes</span>
 				</div>
 			</div>
