modification accessibilité et img

--- a/contact.html
+++ b/contact.html
@@ -84,25 +84,25 @@
 			<div class="col-sm-6 container-form-contact">
 				<form id="form_1" novalidate >
 					<div class="form-group">
-						<label class="label-1">
+						<label class="label-1" for="name">
 							Nom
 						</label>
 						<input id="name" class="form-control" required />
 					</div>
 					<div class="form-group">
-						<label class="label-2">
+						<label class="label-2" for="email">
 							Adresse email
 						</label>
 						<input id="email" class="form-control" type="email" required />
 					</div>
 					<div class="form-group">
-						<label class="label-3">
+						<label class="label-3" for="input_504">
 							Comment nous avez-vous connu ?
 						</label>
 						<input class="form-control" type="email" required id="input_504" />
 					</div>
 					<div class="form-group">
-						<label class="label-4">
+						<label class="label-4" for="message">
 							Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
 						</label><textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
 					</div> 
@@ -137,22 +137,22 @@
 				<div class="row row-no-gutters social-contact-reseau">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social-contact-reseau" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+							<a class="social-contact-reseau social-link" href="https://twitter.com" target="blank">Twitter<span  class="fa fa-twitter icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center content-social">
-							<a class="social-contact-reseau" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+							<a class="social-contact-reseau social-link" href="index.html" target="blank">Facebook<span  href="index.html" class="fa fa-facebook icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social-contact-reseau" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+							<a class="social-contact-reseau social-link" href="index.html" target="blank">Dribble<span class="fa fa-dribbble icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social-contact-reseau" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+							<a class="social-contact-reseau social-link" href="index.html" target="blank">Instagram<span class="fa fa-instagram icon-md"></span></a>
 						</div>
 					</div>
 				</div>
