--- a/index.html
+++ b/index.html
@@ -230,23 +230,23 @@
 					</p>
 					<div class="row row-no-gutters social">
 						<div class="col-sm-3">
-							<div class="text-center">
-								<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+							<div class="text-center ">
+								<a class="social-link" href="https://twitter.com">Twitter<span class="fa fa-twitter icon-md"></span></a>
+							</div>
+						</div>
+						<div class="col-sm-3">
+							<div class="text-center ">
+								<a class="social-link" href="https://facebook.com">Facebook<span class="fa fa-facebook icon-md"></span></a>
+							</div>
+						</div>
+						<div class="col-sm-3">
+							<div class="text-center ">
+								<a class="social-link" href="https://dribble.com">Dribble<span class="fa fa-dribbble icon-md"></span></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
-							</div>
-						</div>
-						<div class="col-sm-3">
-							<div class="text-center">
-								<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
-							</div>
-						</div>
-						<div class="col-sm-3">
-							<div class="text-center">
-								<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+								<a class="social-link " href="https://instagram.com">Instagram<span class="fa fa-instagram icon-md"></span></a>
 							</div>
 						</div>
 						<div class="keywords">
