--- a/contact.html
+++ b/contact.html
@@ -142,7 +142,7 @@
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center content-social">
-							<a class="social-contact-reseau social-link" href="index.html" target="blank">Facebook<span  href="index.html" class="fa fa-facebook icon-md"></span></a>
+							<a class="social-contact-reseau social-link" href="index.html" target="blank">Facebook<span class="fa fa-facebook icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
